--- a/index.html
+++ b/index.html
@@ -52,8 +52,45 @@
     <main class="main">
 
         <section class="home-section" id="home">
+         <div class="home__container container grid">
+            <div class="home__data">
+              <h1 class="home__title">Crispy And<br> Pizzas</h1>
+              <p class="home__description">
+                Order the best pizzas to end your hunger and make family moments more memorable,place your order now.
+              </p>
+              <a href="#products" class="button">Order Pizza Now</a>
 
-        </section>
+              <img src="assests/img/sticker-pizza.svg" alt="image" class="home__sticker_1">
+              <img src="assests/img/sticker-leaf.svg" alt="image" class="home__sticker_2">
+
+            </div>
+         <div class="home__images">
+         <img src="assests/img/home-pizza.png" alt="image" class="home__pizza">
+         <img src="assests/img/home-board.png" alt="image" class="home__board">
+         <img src="assests/img/home-leaf-1.png" alt="image" class="home__ingredient home__leaf_1">
+         <img src="assests/img/home-leaf-2.png" alt="image" class="home__ingredient home__leaf_2">
+         <img src="assests/img/home-pepperoni.png" alt="image" class="home__ingredient home__pepperoni">
+         <img src="assests/img/home-mushroom.png" alt="image" class="home__ingredient home__mushroom">
+         <img src="assests/img/home-olive.png" alt="image" class="home__ingredients home__olive">
+         <img src="assests/img/home-tomato.png" alt="image" class="home__ingredient home__tomato">
+         </div>
+        </div>
+     </section>
+     
+     <section class="about__section" id="about">
+        <div class="about__contaniner container grid">
+            <div class="about__data">
+                <h2 class="section__title">Learn More About Our History</h2>
+                <p class="about__description">
+                    The secret to success is best ingredients to make a better pizza .Today we strive for perfection,just as we have been doing for 15 years when we first opened the pizzeria in Lima--Peru.
+                </p>
+                <a href="#popular" class="button">The Best Pizzas</a>
+
+                <img src="assests/img/sticker-cheese.svg" alt="image" class="about__sticker">
+            </div>
+            <img src="assests/img/about-img.png" alt="image" class="about__img">
+        </div>
+     </section>
 
         <section class="product section" id="products">
 
