--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assests/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assests/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assests/css/styles.css">
     <title>Responsive Pizza Website</title>
 </head>
@@ -80,7 +80,7 @@
      <section class="about__section" id="about">
         <div class="about__contaniner container grid">
             <div class="about__data">
-                <h2 class="section__title">Learn More About Our History</h2>
+                <h2 class="section__title">Learn More About<br> Our History</h2>
                 <p class="about__description">
                     The secret to success is best ingredients to make a better pizza .Today we strive for perfection,just as we have been doing for 15 years when we first opened the pizzeria in Lima--Peru.
                 </p>
@@ -93,7 +93,35 @@
      </section>
 
         <section class="product section" id="products">
+               <div class="popular__container container grid">
+                <div class="popular__data">
+                  <h2 class="section__title">Discover<br>Popular Pizza</h2>
+                <p class="popular__description">
+                  Select the best Prepared and Delicious flavours.We have collected some popular recipes from around the world for you to choose your faviourites.
+                </p>
+                
+                </div>
+                <div class="popular__swiper swiper">
+                  <img src="assests//img/popular-dish.png" alt="image" class="popular__dish">
+                  <div class="swiper-wrapper">
+                    <article class="popular__card swiper-slide">
+                      <img src="assests/img/popular-1.png" alt="image" class="popular__image">
+                      <h3 class="popular__title">Margherita Pizza</h3>
+                    </article>
 
+                    <article class="popular__card swiper-slide">
+                      <img src="assests/img/popular-2.png" alt="image" class="popular__image">
+                      <h3 class="popular__title">Mushroom Pizza</h3>
+                    </article>
+                  
+                    <article class="popular__card swiper-slide">
+                      <img src="assests/img/popular-3.png" alt="image" class="popular__image">
+                      <h3 class="popular__title">Pepperoni Pizza</h3>
+                    </article>
+
+                  </div>
+                </div>
+               </div>
         </section>
 
         <section class="contact section" id="contact">
@@ -105,7 +133,7 @@
 
         </footer>
 
-        <script src=""></script>
+        <script src="assests/js/swiper-bundle.min.js"></script>
 
         <script src="">
         </script>
