--- a/index.html
+++ b/index.html
@@ -234,15 +234,16 @@
                <i class="ri-shopping-bag-3-fill"></i>
               </button>
             </article>
-
-            
-
-
-          </div>
+        </div>
         </section>
 
         <section class="contact section" id="contact">
-
+        <div class="contact__container container grid">
+          <div class="contact__data">
+            <h2 class="section__title"></h2>
+          </div>
+          <div class="contact__image"></div>
+        </div>
         </section>
         </main>
 
