--- a/index.html
+++ b/index.html
@@ -240,17 +240,106 @@
         <section class="contact section" id="contact">
         <div class="contact__container container grid">
           <div class="contact__data">
-            <h2 class="section__title"></h2>
+            <h2 class="section__title">Contact Now</h2>
+            <div class="contact__into__grid">
+              <div>
+                <h3 class="contact__title">Write Us</h3>
+              </div class="contact__social">
+              <a href="https://api.whatsapp.com/send?phone=51123456789&text=Hello" target="_blank" class="contact__social__link">
+                <i class="ri-whatsapp-fill"></i>
+              </a>
+              <a href="https://m.me/bedimcode" target="_blank" class="contact__social__link">
+                <i class="ri-messenger-fill"></i>
+              </a>
+              <a href="https://t.me/telegram" target="_blank" class="contact__social__link">
+                <i class="ri-telegram-fill"></i>
+              </a>
+
+              <div>
+                <h3 class="contact__title">Delivery</h3>
+               
+                <address class="contact__address">
+                  +00-987-7654-321<br>
+                  +11-012345
+                </address>
+              </div>
+
+              <div>
+                <h3 class="contact__title">Location</h3>
+                <address class="contact__address">
+                  Lima - Sun City -Peru <br>
+                  Av. Moon #4321
+                </address>
+                <a href="https://maps.goo.gl/iHTNbLDu7EYtJW2x5" target="_blank" class="contact__map"></a>
+                <i class="ri-map-pin-full"></i>
+                <span>View on Map</span>
+              </div>
+
+            </div>
           </div>
-          <div class="contact__image"></div>
+          <div class="contact__image">
+            <img src="assests/img/contact-img.png" alt="image" class="contact__img">
+          </div>
+          <img src="assests/img/sticker-tomato.svg" alt="image" class="contact__sticker_1">
+          <img src="assests/img/sticker-mushroom.svg" alt="image" class="contact__sticker_2">
+          <img src="assests/img/sticker-onion.svg" alt="image" class="contact__sticker_3">
+
         </div>
         </section>
         </main>
 
         <footer class="footer">
+        <div class="footer__container container grid">
+        <a href="#" class="footer__logo">Pizza</a>
+        <div class="footer__content grid">
+          <div>
+            <h3 class="footer__title">Social</h3>
+            <div class="footer__social">
+              <a href="https://facebook.com/" target="_blank" class="footer__social-link">
+                <i class="ri-facebook-circle-fill"></i>
+              </a>
 
+              <a href="https://instagram.com/" target="_blank" class="footer__social-link">
+                <i class="ri-instagram-circle-fill"></i>
+              </a>
+
+              <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                <i class="ri-twitter-circle-fill"></i>
+              </a>
+
+            </div>
+          </div>
+
+          <div>
+            <h3 class="footer__title">Payment Methods</h3>
+            <div class="footer__pay">
+              <img src="assests/img/footer-card-1.png" alt="image" class="footer__pay_image">
+              <img src="assests/img/footer-card-2.png" alt="image" class="footer__pay_image">
+              <img src="assests/img/footer-card-3.png" alt="image" class="footer__pay_image">
+              <img src="assests/img/footer-card-4.png" alt="image" class="footer__pay_image">
+
+            </div>
+          </div>
+
+          <div>
+            <h3 class="footer__title">Subscribe for Discounts</h3>
+            <form action="" class="footer__form">
+              <input type="email" placeholder="Email" class="footer__input">
+            <button type="submit" class="footer__button button">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        </div>
+
+        <div class="footer__policy">
+           <a href="" class="footer__link">Terms & Agreement</a>
+           <a href="" class="footer__link">Privacy & Policy</a>
+
+        </div>
+
+        <span class="footer__copy"></span>
         </footer>
-
+           &#169, All Right Reserved By Abdul Wahab
         <script src="assests/js/swiper-bundle.min.js"></script>
 
         <script src="">
